--- a/.classpath
+++ b/.classpath
@@ -8,6 +8,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="lib/StudentMgmt-Backend-API.jar" sourcepath="lib/StudentMgmt-Backend-API-src.jar"/>
+	<classpathentry kind="lib" path="lib/include/StudentMgmt-Backend-API-jar-with-dependencies.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
